# psimedia

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  INSTALL  README  README.md  TODO  changelog.txt  config.ui  deviceenum.h  deviceenum_mac.cpp  deviceenum_unix.cpp  deviceenum_win.cpp  gstcustomelements.c  gstcustomelements.h  gstcustomelements_apprtpsink.c  gstcustomelements_apprtpsrc.c  gstcustomelements_appvideosink.c  gstprovider.cpp  main.cpp  mainwin.ui  psimedia.cpp  psimedia.h  psimedia.pro  psimedia.qc  psimediaprovider.h
cmake/modules/: FindPsiPluginsApi.cmake
demo/: CMakeLists.txt  demo.pro  main.cpp  main.h
gstplugin/: CMakeLists.txt  gstplugin.cpp
gstprovider/: CMakeLists.txt  bins.cpp  bins.h  deviceenum_mac.cpp  deviceenum_unix.cpp  devices.cpp  devices.h  gstaudiorecordercontext.cpp  gstaudiorecordercontext.h  gstconf.pri  gstcustomelements.h  gstprovider.cpp  gstprovider.h  gstprovider.pri  gstprovider.pro  gstthread.cpp  gstthread.h  modes.cpp  modes.h  payloadinfo.cpp  payloadinfo.h  pipeline.cpp  pipeline.h  rtpworker.cpp  rtpworker.h  rwcontrol.cpp  rwcontrol.h
gstprovider/alsalatency/: Makefile  alsalatency.c
gstprovider/deviceenum/: deviceenum.h  deviceenum.pri  deviceenum_mac.cpp  deviceenum_unix.cpp  deviceenum_win.cpp
gstprovider/devices/: deviceenum.pri  deviceenum_mac.cpp  deviceenum_unix.cpp  deviceenum_win.cpp
gstprovider/gstcustomelements/: apprtpsrc.c  appvideosink.c  gstboilerplatefixed.h  gstcustomelements.c  gstcustomelements.h  gstcustomelements.pri
gstprovider/gstelements/: README  audioresample.pri  directsound.pri  directsound_static.c  gstelements.c  gstelements.h  gstelements.pri  liveadder.pri  osxaudio.pri  osxaudio_static.c  osxvideo.pri  osxvideo_static.m  rtpmanager.pri  rtpmanager_static.c  speexdsp.pri  videomaxrate.pri  winks.pri  winks_static.c
gstprovider/gstelements/audioresample/: buffer.c
gstprovider/gstelements/directsound/: CMakeLists.txt  Makefile.am  dsguids.c  gstdirectsound.c  gstdirectsound.h  gstdirectsoundplugin.c  gstdirectsoundringbuffer.c  gstdirectsoundringbuffer.h  gstdirectsoundsink.c  gstdirectsoundsink.h  gstdirectsoundsrc.c  gstdirectsoundsrc.h
gstprovider/gstelements/directsound_sinkonly/: Makefile.am  Makefile.in  gstdirectsound.c  gstdirectsound.h  gstdirectsoundplugin.c  gstdirectsoundringbuffer.c  gstdirectsoundringbuffer.h  gstdirectsoundsink.c  gstdirectsoundsink.h
gstprovider/gstelements/liveadder/: CMakeLists.txt  liveadder.c  liveadder.h
gstprovider/gstelements/osxaudio/: CMakeLists.txt  Makefile.am  gstosxaudio.c  gstosxaudioelement.c  gstosxaudioelement.h  gstosxaudiosink.c  gstosxaudiosink.h  gstosxaudiosrc.c  gstosxaudiosrc.h  gstosxringbuffer.c  gstosxringbuffer.h
gstprovider/gstelements/osxvideo/: CMakeLists.txt  Makefile.am  cocoawindow.h  cocoawindow.m  osxvideoplugin.m  osxvideosink.h  osxvideosink.m  osxvideosrc.c  osxvideosrc.h
gstprovider/gstelements/rtpmanager/: gstrtpbin-marshal.c  gstrtpbin-marshal.h
gstprovider/gstelements/shared/: config.h  shared.pri  shared.pro
gstprovider/gstelements/shared/audioresample/: audioresample.pro
gstprovider/gstelements/shared/directsound/: directsound.pro
gstprovider/gstelements/shared/liveadder/: liveadder.pro
gstprovider/gstelements/shared/osxaudio/: osxaudio.pro
gstprovider/gstelements/shared/osxvideo/: osxvideo.pro
gstprovider/gstelements/shared/rtpmanager/: rtpmanager.pro
gstprovider/gstelements/shared/speexdsp/: speexdsp.pro
gstprovider/gstelements/shared/videomaxrate/: videomaxrate.pro
gstprovider/gstelements/shared/winks/: winks.pro
gstprovider/gstelements/speexdsp/: CMakeLists.txt  Makefile.am  speexdsp.c  speexdsp.h  speexdspplugin.c  speexechoprobe.c  speexechoprobe.h
gstprovider/gstelements/static/: audioresample_static.c  directsound_static.c  gstelements.c  gstelements.h  liveadder_static.c  osxaudio_static.c  osxvideo_static.m  rtpmanager_static.c  speexdsp_static.c  static.pro  videomaxrate_static.c  winks_static.c
gstprovider/gstelements/videomaxrate/: CMakeLists.txt  videomaxrate.c  videomaxrate.h  videomaxrateplugin.c
gstprovider/gstelements/winks/: CMakeLists.txt  gstksclock.c  gstksclock.h  gstksvideodevice.c  gstksvideodevice.h  gstksvideosrc.c  gstksvideosrc.h  kshelpers.c  kshelpers.h  ksvideohelpers.c  ksvideohelpers.h
psimedia/: README.md  psimedia.cpp  psimedia.h  psimedia.pri  psimedia_p.h  psimediaprovider.h
psiplugin/: CMakeLists.txt  opt_avcall.cpp  opt_avcall.h  opt_avcall.ui  psiplugin.cpp
qcm/: buildmodeapp.qcm  qt4.qcm  qt5.qcm  universal.qcm
